maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:43: error: not found: value virages
    virages=virages-1
    ^Escaper:51: error: not found: value virages
    virages=virages+1
    ^Escaper:56: error: not found: value virages
    virages=virages+1
    ^